Update visualization and training notebooks

--- a/COCO_VIZ.ipynb
+++ b/COCO_VIZ.ipynb
@@ -325,8 +325,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "annotation_path = 'coco_annotations.json'\n",
-    "image_dir = 'images/'"
+    "annotation_path = 'output/labels.json'\n",
+    "image_dir = 'output/data/'"
    ]
   },
   {
@@ -338,7 +338,7 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Dataset Info:\n=============\n  description: HistoPathology dataset\n  url: http://cocodataset.org\n  version: 1.0\n  year: 2021\n  contributor: Kaarel R\n  date_created: Tue May 11 20:48:32 2021\n\nLicenses:\n=========\n\nCategories:\n=========\n  super_category: cell\n    id 1: Spermatogonia\n    id 2: Sertoli\n    id 3: Primary spermatocyte\n    id 4: Spermatid\n    id 5: Spermatozoa\n\n"
+      "Dataset Info:\n=============\n  contributor: Kaarel R\n  date_created: Thu May 20 10:17:22 2021\n  description: HistoPathology dataset\n  url: http://cocodataset.org\n  version: 1.0\n  year: 2021\n\nLicenses:\n=========\n\nCategories:\n=========\n  super_category: cell\n    id 1: Spermatogonia\n    id 2: Sertoli\n    id 3: Primary spermatocyte\n    id 4: Spermatid\n    id 5: Spermatozoa\n\n"
      ]
     }
    ],
@@ -351,14 +351,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Image:\n======\n  license: 0\n  file_name: 18H14294I_123904_184320.png\n  coco_url: \n  height: 1024\n  width: 1024\n  date_captured: 2021-05-8 17:00:00\n  flickr_url: \n  id: 49427\n  segmentations (14):\n    112:blue:{'supercategory': 'cell', 'id': 1, 'name': 'Spermatogonia'}\n    113:purple:{'supercategory': 'cell', 'id': 1, 'name': 'Spermatogonia'}\n    114:red:{'supercategory': 'cell', 'id': 1, 'name': 'Spermatogonia'}\n    115:green:{'supercategory': 'cell', 'id': 1, 'name': 'Spermatogonia'}\n    116:orange:{'supercategory': 'cell', 'id': 2, 'name': 'Sertoli'}\n    117:salmon:{'supercategory': 'cell', 'id': 2, 'name': 'Sertoli'}\n    118:pink:{'supercategory': 'cell', 'id': 2, 'name': 'Sertoli'}\n    119:gold:{'supercategory': 'cell', 'id': 3, 'name': 'Primary spermatocyte'}\n    120:orchid:{'supercategory': 'cell', 'id': 3, 'name': 'Primary spermatocyte'}\n    121:slateblue:{'supercategory': 'cell', 'id': 3, 'name': 'Primary spermatocyte'}\n    122:limegreen:{'supercategory': 'cell', 'id': 3, 'name': 'Primary spermatocyte'}\n    123:seagreen:{'supercategory': 'cell', 'id': 4, 'name': 'Spermatid'}\n    124:darkgreen:{'supercategory': 'cell', 'id': 4, 'name': 'Spermatid'}\n    125:olive:{'supercategory': 'cell', 'id': 4, 'name': 'Spermatid'}\n"
+      "Image:\n======\n  coco_url: \n  date_captured: 2021-05-8 17:00:00\n  file_name: 18H14294I_115712_190464.png\n  flickr_url: \n  height: 1024\n  id: 46177\n  license: 0\n  width: 1024\n  segmentations (7):\n    90:blue:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    91:purple:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    92:red:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    93:green:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    94:orange:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    95:salmon:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n    96:pink:{'id': 2, 'name': 'Sertoli', 'supercategory': 'cell'}\n"
      ]
     },
     {
@@ -367,16 +367,16 @@
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ],
-      "text/html": "<div class=\"container\" style=\"position:relative;\"><img src=\"images/18H14294I_123904_184320.png\" style=\"position:relative;top:0px;left:0px;width:600px;\"><div class=\"svgclass\"><svg width=\"600\" height=\"600.0\"><text x=\"511\" y=\"435\" fill=\"yellow\">Spermatogonia</text><polygon points=\"511 435 595 435 595 506 511 506 511 435\" style=\"fill:blue; stroke:blue; stroke-width:1; fill-opacity:0\" /><text x=\"485\" y=\"391\" fill=\"yellow\">Spermatogonia</text><polygon points=\"485 391 558 391 558 435 485 435 485 391\" style=\"fill:purple; stroke:purple; stroke-width:1; fill-opacity:0\" /><text x=\"413\" y=\"245\" fill=\"yellow\">Spermatogonia</text><polygon points=\"413 245 492 245 492 341 413 341 413 245\" style=\"fill:red; stroke:red; stroke-width:1; fill-opacity:0\" /><text x=\"370\" y=\"69\" fill=\"yellow\">Spermatogonia</text><polygon points=\"370  69 451  69 451 169 370 169 370  69\" style=\"fill:green; stroke:green; stroke-width:1; fill-opacity:0\" /><text x=\"263\" y=\"87\" fill=\"yellow\">Sertoli</text><polygon points=\"263  87 328  87 328  28 263  28 263  87\" style=\"fill:orange; stroke:orange; stroke-width:1; fill-opacity:0\" /><text x=\"189\" y=\"2\" fill=\"yellow\">Sertoli</text><polygon points=\"189   2 237   2 237  72 189  72 189   2\" style=\"fill:salmon; stroke:salmon; stroke-width:1; fill-opacity:0\" /><text x=\"284\" y=\"78\" fill=\"yellow\">Sertoli</text><polygon points=\"284  78 324  78 324 141 284 141 284  78\" style=\"fill:pink; stroke:pink; stroke-width:1; fill-opacity:0\" /><text x=\"133\" y=\"213\" fill=\"yellow\">Primary spermatocyte</text><polygon points=\"133 213 180 213 180 272 133 272 133 213\" style=\"fill:gold; stroke:gold; stroke-width:1; fill-opacity:0\" /><text x=\"106\" y=\"280\" fill=\"yellow\">Primary spermatocyte</text><polygon points=\"106 280 151 280 151 329 106 329 106 280\" style=\"fill:orchid; stroke:orchid; stroke-width:1; fill-opacity:0\" /><text x=\"159\" y=\"513\" fill=\"yellow\">Primary spermatocyte</text><polygon points=\"159 513 204 513 204 587 159 587 159 513\" style=\"fill:slateblue; stroke:slateblue; stroke-width:1; fill-opacity:0\" /><text x=\"22\" y=\"536\" fill=\"yellow\">Primary spermatocyte</text><polygon points=\" 22 536  70 536  70 583  22 583  22 536\" style=\"fill:limegreen; stroke:limegreen; stroke-width:1; fill-opacity:0\" /><text x=\"157\" y=\"458\" fill=\"yellow\">Spermatid</text><polygon points=\"157 458 185 458 185 485 157 485 157 458\" style=\"fill:seagreen; stroke:seagreen; stroke-width:1; fill-opacity:0\" /><text x=\"121\" y=\"451\" fill=\"yellow\">Spermatid</text><polygon points=\"121 451 155 451 155 479 121 479 121 451\" style=\"fill:darkgreen; stroke:darkgreen; stroke-width:1; fill-opacity:0\" /><text x=\"195\" y=\"474\" fill=\"yellow\">Spermatid</text><polygon points=\"195 474 235 474 235 516 195 516 195 474\" style=\"fill:olive; stroke:olive; stroke-width:1; fill-opacity:0\" /></svg></div></div><style>.svgclass { position:absolute; top:0px; left:0px;}</style>"
+      "text/html": "<div class=\"container\" style=\"position:relative;\"><img src=\"output/data/18H14294I_115712_190464.png\" style=\"position:relative;top:0px;left:0px;width:600px;\"><div class=\"svgclass\"><svg width=\"600\" height=\"600.0\"><text x=\"-14\" y=\"514\" fill=\"yellow\">Sertoli</text><polygon points=\"-14 514  35 514  35 575 -14 575 -14 514\" style=\"fill:blue; stroke:blue; stroke-width:1; fill-opacity:0\" /><text x=\"164\" y=\"457\" fill=\"yellow\">Sertoli</text><polygon points=\"164 457 216 457 216 525 164 525 164 457\" style=\"fill:purple; stroke:purple; stroke-width:1; fill-opacity:0\" /><text x=\"240\" y=\"437\" fill=\"yellow\">Sertoli</text><polygon points=\"240 437 281 437 281 539 240 539 240 437\" style=\"fill:red; stroke:red; stroke-width:1; fill-opacity:0\" /><text x=\"103\" y=\"485\" fill=\"yellow\">Sertoli</text><polygon points=\"103 485 148 485 148 581 103 581 103 485\" style=\"fill:green; stroke:green; stroke-width:1; fill-opacity:0\" /><text x=\"16\" y=\"226\" fill=\"yellow\">Sertoli</text><polygon points=\" 16 226  72 226  72 265  16 265  16 226\" style=\"fill:orange; stroke:orange; stroke-width:1; fill-opacity:0\" /><text x=\"32\" y=\"268\" fill=\"yellow\">Sertoli</text><polygon points=\" 32 268  98 268  98 315  32 315  32 268\" style=\"fill:salmon; stroke:salmon; stroke-width:1; fill-opacity:0\" /><text x=\"-18\" y=\"278\" fill=\"yellow\">Sertoli</text><polygon points=\"-18 278  32 278  32 322 -18 322 -18 278\" style=\"fill:pink; stroke:pink; stroke-width:1; fill-opacity:0\" /></svg></div></div><style>.svgclass { position:absolute; top:0px; left:0px;}</style>"
      },
      "metadata": {},
-     "execution_count": 8
+     "execution_count": 9
     }
    ],
    "source": [
     "id = 49427 # or 'random' \n",
     "\n",
-    "html = coco_dataset.display_image(49427, use_url=False, show_polys=True )\n",
+    "html = coco_dataset.display_image('random', use_url=False, show_polys=True )\n",
     "IPython.display.HTML(html)"
    ]
   },
